Fix layout issue for mobile menu

--- a/css/main.css
+++ b/css/main.css
@@ -717,17 +717,22 @@ h2~p {
 
     .header-nav li {
         display: block;
-        margin-top: 1em;
+        margin: 1em 0 0;
     }
 
-    .header-nav li:first-child a{
+    .header-nav li~li {
+        border: 0;
+        padding: 0;
+    }
+
+    .header-nav li:first-child a {
         color: #fff;
     }
 
     .header-nav li:last-child {
         margin-bottom: 1em;
     }
-    
+
     .header-nav .dropdown:hover .drop-menu,
     .header-nav .drop-trigger:after {
         display: none;
@@ -736,14 +741,14 @@ h2~p {
     .header-nav .drop-trigger {
         padding-right: 0;
     }
-   
+
     .mobile-menu-check:checked~.header-nav {
         max-height: 1000px;
     }
 
-    .mobile-menu-check:checked ~.show-mobile-menu:after {
+    .mobile-menu-check:checked~.show-mobile-menu:after {
         background-color: #000;
-        color:#ed6e2f;
+        color: #ed6e2f;
         content: "CLOSE";
         left: 0;
         position: absolute;
